# s2rst

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
core/: Cargo.toml  LICENSE  NOTICE  README.md
core/.cargo/: config.toml
core/benches/: boolean_operation.rs  buffer_operation.rs  builder.rs  builder_advanced.rs  cap.rs  cell.rs  cell_id.rs  cell_index.rs  cell_iterator_join.rs  cell_union.rs  closest_cell_query.rs  closest_edge_query.rs  closest_point_query.rs  contains_point_query.rs  convex_hull.rs  coords.rs  density_tree.rs  edge_clipping.rs  edge_crossing.rs  edge_distances.rs  encoded_uint_vector.rs  encoding.rs  furthest_edge_query.rs  hausdorff_distance.rs  latlng.rs  latlng_rect_bounder.rs  loop_operations.rs  loop_polygon.rs  point_angle.rs  point_compression.rs  point_measures.rs  polygon.rs  polyline.rs  polyline_alignment.rs  predicates.rs  r2_edge_clipper.rs  region_coverer.rs  robust_cell_clipper.rs  sequence_lexicon.rs  shape_index.rs  (+7 more)
core/benches/baselines/: README.md
core/benches/wall/: edge_crossing.rs  point_angle.rs  polyline.rs  predicates.rs  shape_index.rs
core/examples/: boolean_operations.rs  buffer_operation.rs  cell_hierarchy.rs  city_distances.rs  convex_hull.rs  edge_queries.rs  encoding_decoding.rs  geofencing.rs  polygon_from_oriented_loops.rs  rect_distance.rs  region_covering.rs  spatial_index.rs  text_format.rs
core/src/: geo_types_interop.rs  lib.rs
core/src/r1/: interval.rs  mod.rs
core/src/r2/: mod.rs  point.rs  rect.rs
core/src/r3/: exact_float.rs  matrix.rs  mod.rs  precise_vector.rs  vector.rs
core/src/s1/: angle.rs  chord_angle.rs  interval.rs  mod.rs
core/src/s2/: buffer_operation.rs  buffer_operation_tests.rs  cap.rs  cell.rs  cell_id.rs  cell_index.rs  cell_iterator_join.rs  cell_range_iterator.rs  cell_union.rs  centroids.rs  chain_interpolation_query.rs  closest_cell_query.rs  closest_edge_query.rs  closest_point_query.rs  contains_point_query.rs  contains_vertex_query.rs  convex_hull_query.rs  convex_hull_query_tests.rs  coords.rs  crossing_edge_query.rs  density_cluster_query.rs  density_tree.rs  density_tree_tests.rs  distance_target.rs  earth.rs  edge_clipping.rs  edge_crosser.rs  edge_crossings.rs  edge_distances.rs  edge_query.rs  edge_tessellator.rs  edge_vector_shape.rs  encoded_s2cell_id_vector.rs  encoded_s2point_vector.rs  encoded_s2shape_index.rs  encoded_string_vector.rs  encoded_uint_vector.rs  encoding.rs  fractal.rs  furthest_edge_query.rs  (+61 more)
core/tests/: builder_integration.rs  cell_clipping.rs  cell_hierarchy.rs  cpp_boolean_op_diff.rs  cpp_cellid_diff.rs  cpp_cross_validation.rs  decoder_robustness.rs  go_cross_validation.rs  loop_geometry.rs  polygon_operations.rs  property_tests.rs  rect_and_cap.rs  region_covering.rs  send_sync.rs  shape_index_queries.rs
core/tests/data/: boolean_op_inputs.txt  cpp_boolean_op_vectors.txt  cpp_cellid_vectors.csv
fuzz/: Cargo.toml  README.md  fuzz.dict  fuzz_all.sh
fuzz/fuzz_targets/: decode_cap.rs  decode_cell.rs  decode_cell_union.rs  decode_density_tree.rs  decode_lax_polygon.rs  decode_lax_polyline.rs  decode_loop.rs  decode_points_compressed.rs  decode_polygon.rs  decode_polyline.rs  decode_s2cell_id_vector.rs  decode_s2point_vector.rs  decode_s2shape_index.rs  decode_shape_index_eager.rs  decode_string_vector.rs  decode_uint_vector_u32.rs  decode_uint_vector_u64.rs  density_tree_ops.rs
fuzz/seeds/decode_cap/: seed-00  seed-02  seed-03  seed-04
fuzz/seeds/decode_cell/: seed-00  seed-01  seed-02  seed-03
fuzz/seeds/decode_cell_union/: seed-00  seed-01  seed-02  seed-03  seed-04  seed-05  seed-06
fuzz/seeds/decode_density_tree/: seed-00  seed-06
fuzz/seeds/decode_lax_polygon/: seed-00  seed-01  seed-02  seed-03  seed-04  seed-05  seed-06
fuzz/seeds/decode_lax_polyline/: seed-00  seed-01  seed-02  seed-03  seed-04  seed-05  seed-06
fuzz/seeds/decode_loop/: seed-00  seed-01  seed-02  seed-03  seed-04  seed-05  seed-06
fuzz/seeds/decode_points_compressed/: seed-00  seed-01  seed-02  seed-03  seed-04  seed-05  seed-06
fuzz/seeds/decode_polygon/: seed-00  seed-01  seed-02  seed-03  seed-04  seed-05  seed-06
python/: .gitignore  AUTHORS  Cargo.toml  Makefile  README.md  pyproject.toml  stubtest-allowlist.txt
python/python/s2rst/: .gitignore  (+2 more)
python/src/: angle.rs  boolean.rs  buffer.rs  builder.rs  cell_query.rs  cells.rs  chain_query.rs  convex_hull.rs  coverer.rs  crossing_query.rs  density.rs  earth.rs  edge_queries.rs  encoding.rs  encoding_rich.rs  enums.rs  geometry.rs  hash_util.rs  index.rs  interval.rs  lib.rs  longtail.rs  measures.rs  metric.rs  misc_queries.rs  point_query.rs  points.rs  polyline_ops.rs  projections.rs  regions.rs  regions_extra.rs  s2point.rs  shapes.rs  snap.rs  term_index.rs  tessellator.rs  text.rs  toolkit.rs  winding.rs
python/tests/: test_angle.py  test_bool.py  test_boolean.py  test_bounds_checks.py  test_buffer.py  test_builder.py  test_cell_query.py  test_cells.py  test_convex_hull.py  test_copy.py  test_coverer.py  test_crossing_shapeutil.py  test_earth.py  test_edge_queries.py  test_encoding.py  test_encoding_rich.py  test_geometry.py  test_hashable.py  test_index.py  test_interval.py  test_iterable.py  test_longtail.py  test_longtail2.py  test_measures.py  test_metric.py  test_misc_queries.py  test_negative_index.py  test_point_query.py  test_points.py  test_polyline_ops.py  test_projections.py  test_properties.py  test_regions.py  test_regions_extra.py  test_s2point.py  test_shapes.py  test_term_index.py  test_text_format.py  test_toolkit.py  test_winding.py
tools/refgen-cpp/: CMakeLists.txt  README.md  extract_boolean_op_inputs.py  generate_boolean_op.cc  generate_cellid.cc
wasm/: Cargo.toml  Makefile
wasm/src/: angle.rs  buffer.rs  builder.rs  cap.rs  cell.rs  cell_id.rs  cell_union.rs  convex_hull.rs  earth.rs  error.rs  indexes.rs  latlng.rs  lax.rs  lib.rs  point.rs  polygon.rs  polyline.rs  rect.rs  region_coverer.rs  s2loop.rs  shape_index.rs  snap.rs  term_indexer.rs  tessellate.rs  text_format.rs
wasm/tests/: web.rs
(+118 files in other folders)
