# Deep (coverage-guided, ASan) fuzzing layer for the s2rst byte decoders — the
# nightly complement to the bounded `cargo test` suite in
# `core/tests/decoder_robustness.rs`. Run with `cargo +nightly fuzz run <target>`.
#
# Standalone workspace (`[workspace]` below) so the cargo-fuzz crate, which needs
# nightly + sanitizers, stays out of the main `cargo build`/CI matrix.
[package]
name = "s2rst-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
s2rst = { path = "../core" }

[[bin]]
name = "decode_uint_vector_u32"
path = "fuzz_targets/decode_uint_vector_u32.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_uint_vector_u64"
path = "fuzz_targets/decode_uint_vector_u64.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_string_vector"
path = "fuzz_targets/decode_string_vector.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_s2cell_id_vector"
path = "fuzz_targets/decode_s2cell_id_vector.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_s2point_vector"
path = "fuzz_targets/decode_s2point_vector.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_s2shape_index"
path = "fuzz_targets/decode_s2shape_index.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_polygon"
path = "fuzz_targets/decode_polygon.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_points_compressed"
path = "fuzz_targets/decode_points_compressed.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_density_tree"
path = "fuzz_targets/decode_density_tree.rs"
test = false
doc = false
bench = false

[[bin]]
name = "density_tree_ops"
path = "fuzz_targets/density_tree_ops.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_shape_index_eager"
path = "fuzz_targets/decode_shape_index_eager.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_loop"
path = "fuzz_targets/decode_loop.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_lax_polygon"
path = "fuzz_targets/decode_lax_polygon.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_lax_polyline"
path = "fuzz_targets/decode_lax_polyline.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_polyline"
path = "fuzz_targets/decode_polyline.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_cell_union"
path = "fuzz_targets/decode_cell_union.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_cell"
path = "fuzz_targets/decode_cell.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decode_cap"
path = "fuzz_targets/decode_cap.rs"
test = false
doc = false
bench = false

# Keep the fuzz crate out of the parent workspace.
[workspace]
