[package]
name = "s2rst-python"
version.workspace = true
edition = "2024"
license = "Apache-2.0"
description = "PyO3 bindings that build the s2rst Python extension module (s2rst._core); not published to crates.io."
repository = "https://github.com/torgebo/s2rst"
publish = false
rust-version.workspace = true

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
# abi3 (stable ABI, floor = Python 3.9): build ONE forward-compatible wheel per
# platform that runs on CPython 3.9+ (including 3.14 and later), rather than a
# wheel per Python version. Keeps the CI/release matrix small and immune to new
# Python releases (the per-version build broke on runners that shipped 3.14,
# which pyo3 0.24 cannot target). Cost is a small per-call FFI overhead —
# negligible here, where the work happens in the Rust core. CI builds with a
# single `-i 3.13` interpreter; the abi3 feature emits one `cp39-abi3` wheel.
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py39"] }
s2rst = { path = "../core" }
