[package]
name = "s2rst-wasm"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false
description = "WebAssembly bindings for the s2rst spherical geometry library"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
s2rst = { path = "../core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

